--- a/app/src/main/res/xml/scene_my_status_in.xml
+++ b/app/src/main/res/xml/scene_my_status_in.xml
@@ -18,7 +18,7 @@
                 motion:motionTarget="@id/vHeart" />
 
             <KeyPosition
-                motion:framePosition="20"
+                motion:framePosition="30"
                 motion:keyPositionType="parentRelative"
                 motion:motionTarget="@+id/vHeart"
                 motion:percentX="0.10" />
@@ -167,8 +167,8 @@
 
         <Constraint
             android:id="@+id/vHeart"
-            android:layout_width="23dp"
-            android:layout_height="23dp"
+            android:layout_width="@dimen/status_life_button_reduced_width"
+            android:layout_height="@dimen/status_life_button_reduced_height"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="8dp"
             motion:layout_constraintBottom_toBottomOf="parent"
@@ -178,8 +178,8 @@
 
         <Constraint
             android:id="@+id/vTime"
-            android:layout_width="23dp"
-            android:layout_height="23dp"
+            android:layout_width="@dimen/status_life_button_reduced_width"
+            android:layout_height="@dimen/status_life_button_reduced_height"
             android:layout_marginStart="39dp"
             android:layout_marginBottom="8dp"
             motion:layout_constraintBottom_toBottomOf="parent"
@@ -189,8 +189,8 @@
 
         <Constraint
             android:id="@+id/vFire"
-            android:layout_width="23dp"
-            android:layout_height="23dp"
+            android:layout_width="@dimen/status_life_button_reduced_width"
+            android:layout_height="@dimen/status_life_button_reduced_height"
             android:layout_marginStart="39dp"
             android:layout_marginBottom="8dp"
             motion:layout_constraintBottom_toBottomOf="parent"
@@ -200,8 +200,8 @@
 
         <Constraint
             android:id="@+id/vWind"
-            android:layout_width="23dp"
-            android:layout_height="23dp"
+            android:layout_width="@dimen/status_life_button_reduced_width"
+            android:layout_height="@dimen/status_life_button_reduced_height"
             android:layout_marginStart="39dp"
             android:layout_marginBottom="8dp"
             motion:layout_constraintBottom_toBottomOf="parent"
@@ -211,8 +211,8 @@
 
         <Constraint
             android:id="@+id/vEarth"
-            android:layout_width="23dp"
-            android:layout_height="23dp"
+            android:layout_width="@dimen/status_life_button_reduced_width"
+            android:layout_height="@dimen/status_life_button_reduced_height"
             android:layout_marginStart="39dp"
             android:layout_marginBottom="8dp"
             motion:layout_constraintBottom_toBottomOf="parent"
@@ -222,8 +222,8 @@
 
         <Constraint
             android:id="@+id/vEat"
-            android:layout_width="23dp"
-            android:layout_height="23dp"
+            android:layout_width="@dimen/status_life_button_reduced_width"
+            android:layout_height="@dimen/status_life_button_reduced_height"
             android:layout_marginStart="39dp"
             android:layout_marginBottom="8dp"
             motion:layout_constraintBottom_toBottomOf="parent"
@@ -247,8 +247,8 @@
 
         <Constraint
             android:id="@+id/vHeart"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="@dimen/status_life_button_width"
+            android:layout_height="@dimen/status_life_button_height"
             android:layout_marginEnd="110dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -257,8 +257,8 @@
 
         <Constraint
             android:id="@+id/vTime"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="@dimen/status_life_button_width"
+            android:layout_height="@dimen/status_life_button_height"
             android:layout_marginStart="110dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
@@ -267,8 +267,8 @@
 
         <Constraint
             android:id="@+id/vFire"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="@dimen/status_life_button_width"
+            android:layout_height="@dimen/status_life_button_height"
             android:layout_marginStart="60dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
@@ -277,8 +277,8 @@
 
         <Constraint
             android:id="@+id/vWind"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="@dimen/status_life_button_width"
+            android:layout_height="@dimen/status_life_button_height"
             android:layout_marginEnd="60dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -287,8 +287,8 @@
 
         <Constraint
             android:id="@+id/vEarth"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="@dimen/status_life_button_width"
+            android:layout_height="@dimen/status_life_button_height"
             android:layout_marginEnd="110dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -297,8 +297,8 @@
 
         <Constraint
             android:id="@+id/vEat"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="@dimen/status_life_button_width"
+            android:layout_height="@dimen/status_life_button_height"
             android:layout_marginStart="110dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
@@ -307,21 +307,21 @@
 
     </ConstraintSet>
 
-// not working
+// not working if here
     <!--<Transition-->
         <!--android:id="@+id/tr_slide"-->
-        <!--motion:constraintSetStart="@+id/end_slide"-->
+        <!--motion:constraintSetStart="@id/end_slide"-->
         <!--motion:constraintSetEnd="@+id/start_slide"-->
         <!--motion:duration="1000"-->
         <!--motion:motionInterpolator="linear">-->
 
         <!--<OnSwipe-->
             <!--motion:dragDirection="dragUp"-->
-            <!--motion:touchAnchorId="@+id/vWind"-->
-            <!--motion:touchAnchorSide="top" />-->
+            <!--motion:touchAnchorId="@+id/vHeart"-->
+            <!--motion:touchAnchorSide="top"-->
+            <!--motion:onTouchUp="decelerateAndComplete"/>-->
 
     <!--</Transition>-->
-
 
     <!--<ConstraintSet android:id="@+id/start_slide">-->
 
@@ -337,8 +337,8 @@
 
         <!--<Constraint-->
             <!--android:id="@+id/vHeart"-->
-            <!--android:layout_width="32dp"-->
-            <!--android:layout_height="32dp"-->
+            <!--android:layout_width="@dimen/status_life_button_width"-->
+            <!--android:layout_height="@dimen/status_life_button_height"-->
             <!--android:layout_marginEnd="110dp"-->
             <!--motion:layout_constraintBottom_toBottomOf="parent"-->
             <!--motion:layout_constraintEnd_toEndOf="parent"-->
@@ -347,8 +347,8 @@
 
         <!--<Constraint-->
             <!--android:id="@+id/vTime"-->
-            <!--android:layout_width="32dp"-->
-            <!--android:layout_height="32dp"-->
+            <!--android:layout_width="@dimen/status_life_button_width"-->
+            <!--android:layout_height="@dimen/status_life_button_height"-->
             <!--android:layout_marginStart="110dp"-->
             <!--motion:layout_constraintBottom_toBottomOf="parent"-->
             <!--motion:layout_constraintStart_toStartOf="parent"-->
@@ -358,7 +358,7 @@
         <!--<Constraint-->
             <!--android:id="@+id/vFire"-->
             <!--android:layout_width="32dp"-->
-            <!--android:layout_height="32dp"-->
+            <!--android:layout_height="@dimen/status_life_button_height"-->
             <!--android:layout_marginStart="60dp"-->
             <!--motion:layout_constraintBottom_toBottomOf="parent"-->
             <!--motion:layout_constraintStart_toStartOf="parent"-->
@@ -367,8 +367,8 @@
 
         <!--<Constraint-->
             <!--android:id="@+id/vWind"-->
-            <!--android:layout_width="32dp"-->
-            <!--android:layout_height="32dp"-->
+            <!--android:layout_width="@dimen/status_life_button_width"-->
+            <!--android:layout_height="@dimen/status_life_button_height"-->
             <!--android:layout_marginEnd="60dp"-->
             <!--motion:layout_constraintBottom_toBottomOf="parent"-->
             <!--motion:layout_constraintEnd_toEndOf="parent"-->
@@ -377,8 +377,8 @@
 
         <!--<Constraint-->
             <!--android:id="@+id/vEarth"-->
-            <!--android:layout_width="32dp"-->
-            <!--android:layout_height="32dp"-->
+            <!--android:layout_width="@dimen/status_life_button_width"-->
+            <!--android:layout_height="@dimen/status_life_button_height"-->
             <!--android:layout_marginEnd="110dp"-->
             <!--motion:layout_constraintBottom_toBottomOf="parent"-->
             <!--motion:layout_constraintEnd_toEndOf="parent"-->
@@ -387,8 +387,8 @@
 
         <!--<Constraint-->
             <!--android:id="@+id/vEat"-->
-            <!--android:layout_width="32dp"-->
-            <!--android:layout_height="32dp"-->
+            <!--android:layout_width="@dimen/status_life_button_width"-->
+            <!--android:layout_height="@dimen/status_life_button_height"-->
             <!--android:layout_marginStart="110dp"-->
             <!--motion:layout_constraintBottom_toBottomOf="parent"-->
             <!--motion:layout_constraintStart_toStartOf="parent"-->
@@ -411,8 +411,8 @@
 
         <!--<Constraint-->
             <!--android:id="@+id/vHeart"-->
-            <!--android:layout_width="23dp"-->
-            <!--android:layout_height="23dp"-->
+            <!--android:layout_width="@dimen/status_life_button_reduced_width"-->
+            <!--android:layout_height="@dimen/status_life_button_reduced_height"-->
             <!--android:layout_marginStart="16dp"-->
             <!--android:layout_marginBottom="8dp"-->
             <!--motion:layout_constraintBottom_toBottomOf="parent"-->
@@ -422,8 +422,8 @@
 
         <!--<Constraint-->
             <!--android:id="@+id/vTime"-->
-            <!--android:layout_width="23dp"-->
-            <!--android:layout_height="23dp"-->
+            <!--android:layout_width="@dimen/status_life_button_reduced_width"-->
+            <!--android:layout_height="@dimen/status_life_button_reduced_height"-->
             <!--android:layout_marginStart="39dp"-->
             <!--android:layout_marginBottom="8dp"-->
             <!--motion:layout_constraintBottom_toBottomOf="parent"-->
@@ -433,8 +433,8 @@
 
         <!--<Constraint-->
             <!--android:id="@+id/vFire"-->
-            <!--android:layout_width="23dp"-->
-            <!--android:layout_height="23dp"-->
+            <!--android:layout_width="@dimen/status_life_button_reduced_width"-->
+            <!--android:layout_height="@dimen/status_life_button_reduced_height"-->
             <!--android:layout_marginStart="39dp"-->
             <!--android:layout_marginBottom="8dp"-->
             <!--motion:layout_constraintBottom_toBottomOf="parent"-->
@@ -444,8 +444,8 @@
 
         <!--<Constraint-->
             <!--android:id="@+id/vWind"-->
-            <!--android:layout_width="23dp"-->
-            <!--android:layout_height="23dp"-->
+            <!--android:layout_width="@dimen/status_life_button_reduced_width"-->
+            <!--android:layout_height="@dimen/status_life_button_reduced_height"-->
             <!--android:layout_marginStart="39dp"-->
             <!--android:layout_marginBottom="8dp"-->
             <!--motion:layout_constraintBottom_toBottomOf="parent"-->
@@ -455,8 +455,8 @@
 
         <!--<Constraint-->
             <!--android:id="@+id/vEarth"-->
-            <!--android:layout_width="23dp"-->
-            <!--android:layout_height="23dp"-->
+            <!--android:layout_width="@dimen/status_life_button_reduced_width"-->
+            <!--android:layout_height="@dimen/status_life_button_reduced_height"-->
             <!--android:layout_marginStart="39dp"-->
             <!--android:layout_marginBottom="8dp"-->
             <!--motion:layout_constraintBottom_toBottomOf="parent"-->
@@ -466,8 +466,8 @@
 
         <!--<Constraint-->
             <!--android:id="@+id/vEat"-->
-            <!--android:layout_width="23dp"-->
-            <!--android:layout_height="23dp"-->
+            <!--android:layout_width="@dimen/status_life_button_reduced_width"-->
+            <!--android:layout_height="@dimen/status_life_button_reduced_height"-->
             <!--android:layout_marginStart="39dp"-->
             <!--android:layout_marginBottom="8dp"-->
             <!--motion:layout_constraintBottom_toBottomOf="parent"-->
